test_data_ajis/ajis/valid/lexer/numbers/n_grouping_underscore_valid.ajis
[
  1_000,
  12_345,
  123_456_789,
  -1_234,
  1_234_567.89
]
