test_data_ajis/ajis/invalid/lexer/numbers/n_fraction_separators_invalid.ajis
[
  1_000.12_34,
  1 000.12 34,
  1,000.12,34
]
